# MDD-HQC

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
mdd-hqc-backend/: Dockerfile  pyproject.toml
mdd-hqc-backend/app/: __init__.py  main.py
mdd-hqc-backend/app/api/: __init__.py  file.py  interactions.py  metrics.py  transformations.py  xml.py
mdd-hqc-backend/app/api/schemas/: path.py  requests.py
mdd-hqc-backend/app/core/: config.py
mdd-hqc-backend/app/core/logging/: json_formatter.py  logging.py  logging_config.json
mdd-hqc-backend/app/data/: ChileEsPresOLD.xml  model.uvl
mdd-hqc-backend/app/models/: __init__.py  feature.py  feature_tree.py  istar.py  llm_contract.py  metrics.py  transformation_result.py  uml.py  uvl.py  xml.py
mdd-hqc-backend/app/models/uml/: __init__.py  plantuml.py  uml.py
mdd-hqc-backend/app/services/: __init__.py  cli_args_service.py  cli_service.py  file_service.py  upload_service.py  uvl_service.py  xml_service.py
mdd-hqc-backend/app/services/artifacts/: plantuml_service.py  uml_service.py  uvl_category_keywords.csv  uvl_service.py  xml_service.py
mdd-hqc-backend/app/services/interaction/: __init__.py  interaction_engine.py  llm.py  llm_client.py  rule_based.py  service.py
mdd-hqc-backend/app/services/llm/: factory.py  lmstudio_client.py  ollama_client.py
mdd-hqc-backend/app/services/metrics/: __init__.py  istar_metrics.py  plantuml_metrics.py  uml_metrics.py  (+1 more)
mdd-hqc-backend/data/: ChileEsPres.xml  model.puml  model.uvl
mdd-hqc-backend/tests/api/: xml.py
(+74 files in other folders)
