[project]
name = "mdd-hqc-backend"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.ruff.lint]
extend-select = ["B"]